# newspulse

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
scripts/: check_sources.py
src/newspulse/: __main__.py  config.py  formatting.py  gemini_client.py  scheduler.py  summarize.py
src/newspulse/bot/: app.py  handlers.py
src/newspulse/db/: migrations.py  models.py  repository.py
src/newspulse/matching/: keywords.py  relevance.py
src/newspulse/scrapers/: __init__.py  base.py  rss.py  web.py
tests/: conftest.py  test_scrapers_live.py
